[package]
name = "ventana-backend-x11"
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]

[dependencies.ventana-hal]
version = "*"
path = "../ventana-hal"