[package]
name = "ventana-hal"
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[features]
default = ["derive"]
derive = ["dep:ventana-derive"]

[dependencies]
thiserror = "1.0.x"

[dependencies.ventana-derive]
version = "*"
path = "../ventana-derive"
optional = true