[package]
name        = "win64"
description = "An opinionated modernization of the Win32 windowing library"
version     = "0.0.1"
readme      = "README.md"
keywords    = ["win32", "windows", "windowing"]
categories  = ["game-development", "rendering", "gui"]

edition.workspace     = true
authors.workspace     = true
license.workspace     = true
repository.workspace  = true

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dependencies]
thiserror = "1.0"

bitflags = "2.6"
cursor-icon = "1.1"

[dependencies.windows]
version  = "0.58"
features = [
  "UI_ViewManagement", 
  "Win32_Devices_HumanInterfaceDevice", 
  "Win32_Foundation", 
  "Win32_Security", 
  "Win32_System_SystemInformation", 
  "Win32_System_Threading", 
  "Win32_UI_Accessibility", 
  "Win32_UI_Controls", 
  "Win32_UI_HiDpi", 
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Graphics_Dwm", 
  "Win32_Graphics_Gdi", 
  "Win32_System_LibraryLoader", 
  "Win32_System_SystemServices", 
  "Win32_UI_Input", 
  "Win32_UI_Input_KeyboardAndMouse", 
  "Win32_UI_Shell_Common", 
  "Win32_UI_Shell_PropertiesSystem"
]
